# crucible

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture.md  edge_gate.md  gate_tokens.py  gen_figures.py  gen_pdf.py  index.html  index.md  podcast.md  python_support.md  run_modes.md  statistical_significance_tutorial.md  tutorial.md  visualizations.md
docs/stylesheets/: extra.css
examples/: breadth.py  donchian_fullrange.py  donchian_gauntlet.py  donchian_holdout.py  ml_meta_label.py  quickstart.py  real_data_yfinance.py  realtest_ingest.py  tearsheet.py  validation.py
examples/realtest/: ma_cross.rts  ma_cross_trades.csv  make_sample_export.py
packaging/crucible-quant-shim/: PUBLISHING.md  README.md  pyproject.toml
src/crucible/: __init__.py  breadth.py
src/crucible/edge/: __init__.py  metrics.py  simulator.py  stats.py  trade_log.py
src/crucible/ml/: __init__.py  decay.py  ic.py  pit.py  redundancy.py
src/crucible/report/: __init__.py  scorecards.py  tearsheet.py
src/crucible/strategies/: __init__.py  base.py  ma_cross.py  macd_cross.py
src/crucible/validation/: __init__.py  diagnostics.py  gate.py  gauntlet.py  holdout.py  pbo.py  permutation.py  search_space.py  thresholds.py  walk_forward.py  windows.py
tests/: conftest.py  test_boundaries.py  test_breadth.py  test_detrended_null.py  test_diagnostics.py  test_gate.py  test_gate_durable_wfe.py  test_gate_real_null.py  test_gate_tokens.py  test_gauntlet.py  test_holdout.py  test_metrics.py  test_ml.py  test_ml_meta_label.py  test_ml_pit.py  test_ml_redundancy.py  test_ml_tearsheet.py  test_pbo.py  test_permutation.py  test_report.py  test_scorecards.py  test_search_space.py  test_simulator.py  test_stats.py  test_thresholds.py  test_trade_log.py  test_walk_forward.py  test_windows.py
